--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,10 @@ boto3==1.38.14
 aiohttp==3.11.18  # Updated to fix CVE-2024-52303, CVE-2024-52304, CVE-2024-42367
 aiomqtt==1.2.1
 # Security
-cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
+cryptography==45.0.3  # Updated to latest available version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==25.0.0
 pyjwt==2.10.1  # Updated to fix CVE-2024-53861
-certifi==2024.10.5  # Updated to latest version
+certifi==2025.4.26  # Updated to latest available version
 python-magic==0.4.27
 # argon2-cffi already included in authentication section
 
@@ -53,7 +53,7 @@ anthropic==0.51.0  # Updated to latest version
 google-generativeai==0.8.5  # Updated to latest version
 tiktoken==0.9.0  # Updated to latest version
 langchain==0.3.25  # Updated to latest version
-langchain-community==0.4.0  # Updated to latest version, fixes CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
+langchain-community==0.3.24  # Updated to latest available version, fixes CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
 transformers==4.50.0  # Updated to latest version
 sentence-transformers==4.1.0  # Updated to latest version
 accelerate==1.6.0  # Updated to latest version
@@ -61,7 +61,7 @@ colbert-ai==0.2.21
 einops==0.8.1
 tinygrad==0.9.0  # Lightweight ML runtime
 safetensors==0.4.3  # For loading safetensors models
-torch==2.6.1  # Pinned to specific version for better security
+torch==2.7.0  # Pinned to the latest available version for better security
 onnx==1.17.0  # ONNX model format support, updated to fix CVE-2024-7776
 # WARNING: ONNX has a known vulnerability (CVE-2024-5187) in download_model_with_test_data function.
 # Mitigation: Do not use download_model_with_test_data function with untrusted sources.
@@ -88,7 +88,7 @@ python-docx==1.1.2  # Updated to latest version
 
 # Computer vision
 opencv-python==4.11.0.86  # Updated to latest version
-pillow==11.2.2  # Updated to fix CVE-2024-28219, CVE-2023-50447, CVE-2024-4863
+pillow==11.2.1  # Updated to latest available version fixing CVE-2024-28219, CVE-2023-50447, CVE-2024-4863
 numpy==2.2.5  # Updated to latest version
 scipy==1.15.3  # Updated to latest version
 scikit-learn==1.6.1  # Updated to latest version
